Fixing top alignment of the main content and rightrail. Making the application of the page gutter less convoluted.

--- a/_scss/component/required_documents.scss
+++ b/_scss/component/required_documents.scss
@@ -16,6 +16,7 @@
 
     @include media($MLL) {
       max-width: rem(375px);
+      margin-top: 0;
     }
   }
 
